--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,6 +4,6 @@ ktor {
         port = ${?PORT}
     }
     application {
-        modules = [ io.sixtysix.ApplicationKt.module ]
+        modules = [ io.sixtysix.happenings.ApplicationKt.module ]
     }
 }
