Add authentication with JWT

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,3 +7,8 @@ ktor {
         modules = [ io.sixtysix.happenings.ApplicationKt.module ]
     }
 }
+
+jwt {
+    domain = "http://localhost:8080"
+    secret = ${?HAPPENINGS_APP_SECRET}
+}
