Add working controller test

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,7 +4,7 @@ ktor {
         port = ${?PORT}
     }
     application {
-        modules = [ io.sixtysix.happenings.ApplicationKt.module ]
+        modules = [ io.sixtysix.happenings.ApplicationKt.regularModule ]
     }
 }
 
