--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,9 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "prettier": {
+    "singleQuote": true
+  },
   "browserslist": {
     "production": [
       ">0.2%",
