Add mock login page

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,11 @@
   "dependencies": {
     "@material-ui/core": "^4.3.2",
     "@material-ui/styles": "^4.3.0",
+    "formik": "^1.5.8",
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
   "scripts": {
