--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,27 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1"
   },
+  "devDependencies": {
+    "husky": "^3.0.4",
+    "lint-staged": "^9.2.3",
+    "prettier": "^1.18.2"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test"
+    "test": "react-scripts test",
+    "pretty": "prettier --write \"src/**/*.js\""
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.js": [
+      "npm run pretty",
+      "git add"
+    ]
   },
   "eslintConfig": {
     "extends": "react-app"
