--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "proxy": "http://localhost:8080",
   "dependencies": {
+    "@js-joda/locale_en": "^2.0.1",
     "@material-ui/core": "^4.3.2",
     "@material-ui/styles": "^4.3.0",
     "formik": "^1.5.8",
-    "moment": "^2.24.0",
+    "js-joda": "^1.11.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
