--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@js-joda/locale_en": "^2.0.1",
     "@material-ui/core": "^4.3.3",
+    "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.3.3",
     "formik": "^1.5.8",
     "js-joda": "^1.11.0",
