--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,8 @@
     "@material-ui/core": "^4.5.0",
     "@material-ui/icons": "^4.4.3",
     "@material-ui/styles": "^4.5.0",
+    "date-fns": "^2.4.1",
     "formik": "^1.5.8",
-    "js-joda": "^1.11.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
