--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,10 +5,10 @@
   "proxy": "http://localhost:8080",
   "dependencies": {
     "date-fns": "^2.6.0",
-    "formik": "^2.0.3",
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-hook-form": "^3.26.5",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
