--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:8080",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.0.4",
     "date-fns": "^2.7.0",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
@@ -12,7 +13,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "redux-starter-kit": "^1.0.1"
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "husky": "^3.1.0",
